# Whatsapp-Data-Science-Toolkit

./: .gitignore  README.md  app.py  pyproject.toml  view.py
select_messages/: select.py
utils/: only_words.py  patterns.py  select.py
view/: main_menu.py
